fixed background gradient on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,11 @@ li{
 body{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   background-color: #FBAB7E;
   background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
-  
 }
 
 header{
